# RTScan

./: .gitignore  Makefile  README.md  bindex.cpp  bindex.h  bindex_cuda.cpp  cuda_and.cu  helper.h  remap.cpp  rt.h  rt_cuda.cu  rtc1.cpp  rtc3.cpp  rtscan.cpp  rtscan_2c.cpp  rtscan_interval_spacing.cpp  timer.h
optix-scan/src/: CMakeLists.txt
optix-scan/src/optixScan/: CMakeLists.txt  aabb.cu  optixScan.cpp  optixScan.cu  optixScan.h  state.h  timer.h
optix-scan/src/rtc1/: CMakeLists.txt  aabb.cu  optixScan.cpp  optixScan.cu  optixScan.h  state.h
optix-scan/src/rtc3/: CMakeLists.txt  aabb.cu  optixScan.cpp  optixScan.cu  state.h  timer.h
optix-scan/src/rtscan/: CMakeLists.txt  optixScan.h
optix-scan/src/rtscan_2c/: CMakeLists.txt  aabb.cu  optixScan.cpp  optixScan.cu  optixScan.h  state.h  timer.h
optix-scan/src/rtscan_interval_spacing/: CMakeLists.txt  aabb.cu  optixScan.cpp  optixScan.cu  optixScan.h  state.h
optix-scan/src/sutil/: Aabb.h  CMakeLists.txt  Camera.h  Exception.h  sutil.cpp  sutil.h
others/MVGpuBTree/: .gitignore  CMakeLists.txt  reproduce.md
others/MVGpuBTree/benchmarks/: concurrent_erase_find_bench.cu  concurrent_insert_range_bench.cu  concurrent_insert_range_reclaimer_bench.cu  concurrent_insert_range_variable_range_bench.cu  insert_find_bench.cu  insert_find_blink_bench.cu
others/MVGpuBTree/cmake/: CPM.cmake
others/MVGpuBTree/include/: rkg.hpp  validation.hpp
others/MVGpuBTree/plots/: plot_concurrent_insert_range.py
others/MVGpuBTree/scripts/: bench_blink_vs_versioned.sh  bench_concurrent_insert_range.sh  bench_concurrent_insert_range_memory.sh
others/rtindex/: .gitignore  README.md  plot.sh  start-comparison-experiments.sh  start-design-experiments.sh
others/rtindex/experiments/src/: CMakeLists.txt  benchmark.py  default_test_configuration.h  device_code.cu  launch_parameters.cuh  main.cu  optix_helpers.cuh  optix_pipeline.cu  optix_pipeline.h  optix_wrapper.cu  optix_wrapper.h  test_configuration.h  test_configuration_override.h
others/rtindex/experiments/src/cmake/: FindOptiX.cmake
others/rtindex/index-prototype/btree/: btree_kernels.hpp  device_bump_allocator.hpp  gpu_blink_tree.hpp  gpu_btree.h  node.hpp
others/rtindex/index-prototype/ext/cudahelpers/: Makefile  README.md  example.cu
others/rtindex/index-prototype/ext/packed_types/: Makefile  example.cu
others/rtindex/index-prototype/ext/packed_types/include/: packed_types.cuh
others/rtindex/index-prototype/ext/packed_types/test/: Makefile
others/rtindex/index-prototype/src/: CMakeLists.txt  benchmarks.cuh  cuda_buffer.cuh  definitions.h  device_code.cu  impl_binsearch.cuh  impl_hashtable.cuh  impl_rtx_index.cuh  impl_scan.cuh  impl_tree.cuh  input_generation.h  launch_parameters.cuh  main.cu  optix_helpers.cuh  optix_pipeline.cu  optix_pipeline.h  optix_wrapper.cu  optix_wrapper.h  result_collector.h  utilities.h
others/rtindex/index-prototype/src/cmake/: configure_optix.cmake
others/rtindex/index-prototype/warpcore/: base.cuh  bucket_list_hash_table.cuh  join.cuh  multi_value_hash_table.cuh  primes.hpp  warpcore.cuh
others/rtindex/results/: _create-all-plots.py
others/rtindex/results/2080ti/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
others/rtindex/results/3090/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
others/rtindex/results/4090/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
others/rtindex/results/4090/experiments/: exponent-shift.csv  int-to-ray.csv  key-size.csv  miss-out-of-range.csv  miss.csv  ordering.csv  primitive.csv  range-query-conversion-mode.csv  range-query-ordering.csv  range-query-start-ray-at-zero.csv  stride.csv  updates.csv
others/rtindex/results/a6000/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
others/rtindex/results/a6000/experiments/: exponent-shift.csv  int-to-ray.csv  key-size.csv  miss-out-of-range.csv  miss.csv  ordering.csv  primitive.csv  range-query-conversion-mode.csv  range-query-ordering.csv  range-query-start-ray-at-zero.csv  stride.csv  updates.csv
script/: gen_data.sh  run.py
test/: bt_test.txt  draw.py  draw_scan_selectivity.py  gen_selectivity.py  gt_test.txt  insert_test.py  normal-rtc1.txt  normal.txt  o_tpchq17.txt  o_tpchq3.txt  o_tpchq6.txt  query_encoding.cpp  ray-length.py  scan-blocksize.py  scan_cmd_1e8-1c-rtscan.txt  scan_cmd_1e8-1c.txt  scan_cmd_1e8-2c.txt  scan_cmd_1e8-4c.txt  scan_cmd_1e8.txt  scan_cmd_20.txt  scan_cmd_20_26_32.txt  scan_cmd_28_30_32.txt  scan_cmd_2p6.txt  scan_cmd_2p8.txt  scan_cmd_32_1c-rtc1.txt  scan_cmd_32_1c.txt  scan_cmd_32_2c.txt  scan_cmd_32_3c.txt  scan_cmd_32_4c.txt  search.py  search2.py  search3.py  tpchq17-cuda.txt  tpchq3-cuda.txt  tpchq3-refine.txt  tpchq6-cuda-refine.txt  tpchq6-cuda.txt  tpchq6-refine.txt  uniform0.9.txt  uniform_encoding  (+6 more)
tools/: generate_normal_data.py  generate_uniform_data_n_col.cpp  generate_zipf_data.py  transferData.cpp
(+1 files in other folders)
